Tính năng Card Members (Join, Add or Remove), Input Auto Search Board , AutoComplete Search Board, Debounce Function, QueryFilters Regex...vv
 Sau khi xong xuôi tính năng Board Users thì chúng ta làm tới tính năng Card Members (thành viên trong Card là tập con của thành viên trong Board.)
👉 Xử lý API thêm hoặc xóa User khỏi Card, tích hợp vào giao diện UI/UX phần Hiển Thị Tích Xanh Avatar cho chuyên nghiệp, tương tự Trello

 Tính năng tìm kiếm và truy cập nhanh tới một cái Board cụ thể ở thanh AppBar. (Autocomplete Search Board)
👉 Hiểu và áp dụng được Mui Autocomplete Input Component để làm một cái Async Input Search.
👉 Kỹ thuật Debounce: viết custom hook useDebounce kết hợp Lodash Debounce, useCallback…vv, tránh việc bị Spam gọi API nhiều lần.
👉 Truyền giá trị tìm kiếm queryFilters phía Front-end lên cho Back-end xử lý query tìm kiếm, phân biệt các trường hợp Search theo chữ hoa và chữ thường, chữ Tiếng Việt, có dấu…vv

--- a/frontend/trello-gui/src/components/AppBar/Notification.module.scss
+++ b/frontend/trello-gui/src/components/AppBar/Notification.module.scss
@@ -3,13 +3,13 @@
     width: 20px !important;
     height: 20px !important;
     position: relative;
-    color: #007e75;
+    color: #FFF;
 }
 
 .button {
     transform: translateY(2px);
     padding: 0;
-    color: #007e75;
+    color: #FFF;
 }
 .button.notification::after {
     content: '';
@@ -71,6 +71,7 @@
     justify-content: flex-end;
     font-size: 12px;
     padding-bottom: 10px;
+    color: rgb(66, 64, 64);
 }
 .notificationItem.borderBottom {
     border-bottom: 2px solid rgb(238, 233, 237);
@@ -93,6 +94,7 @@
 }
 .notificationTitle > p {
     font-size: 13.5px;
+    color: rgb(66, 64, 64);
 }
 .icon-invite {
     width: 22px !important;
@@ -143,4 +145,5 @@
     gap: 1px;
     font-size: 13px;
     font-weight: normal;
+    color: black;
 }
