--- a/frontend/trello-gui/src/components/Button/Button.module.scss
+++ b/frontend/trello-gui/src/components/Button/Button.module.scss
@@ -13,6 +13,7 @@
         margin-left: 10px;
     }
     width: fit-content;
+    color: #FFF;
 }
 .wrapper:hover {
     cursor: pointer; /* đổi thành con trỏ bàn tay */
@@ -23,8 +24,8 @@
     transform: translateX(30px);
 }
 .outline {
-    border: 1px solid #007e75;
-    color: #007e75;
+    border: 1px solid #FFF;
+    color: #FFF;
     &:hover {
         background-color: #e2eaf3;
     }
@@ -45,11 +46,11 @@
 .chipHover {
     height: 31px;
     &:hover {
-        background-color: #e2eaf3;
+        background-color: #6da9ed;
         cursor: pointer; /* đổi thành con trỏ bàn tay */
     }
     font-weight: 500;
-    color: var(--color-green);
+    color: #FFF;
 }
 // css input file
 .hidden-input {
