--- a/frontend/trello-gui/src/components/Card/Card.module.scss
+++ b/frontend/trello-gui/src/components/Card/Card.module.scss
@@ -25,7 +25,7 @@
     position: relative;
     top: 30px;
     z-index: 99;
-    left: 205px;
+    left: 240px;
     width: 30px;
     height: 30px;
 }
@@ -37,7 +37,7 @@
     font-size: 17px;
     font-weight: bold;
     margin-left: 15px;
-    color: white;
+    color: var(--color-button-boards) !important;
     cursor: pointer;
     font-family: 'Times New Roman', Times, serif;
     width: 80%;
@@ -54,14 +54,15 @@
     position: relative;
     top: 3px;
     margin-top: -13px;
-    width: 240px;
+    width: 290px;
     height: fit-content;
     max-height: calc(100vh - var(--app-bar-height) - var(--board-bar-height) - 40px);
-    background-color: var(--color-green) !important;
+    background-color: var(--color-column);
     border-radius: 6px;
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
+    max-width: 290px;
 }
 .wrapper.titleh3 {
     margin-top: -13px;
@@ -103,6 +104,8 @@
         100vh - var(--app-bar-height) - var(--board-bar-height) - var(--column-card-title) - var(--footer-card) - 90px
     );
     overflow-y: auto;
+    padding-bottom: 10px;
+    max-width: 290px;
     overflow-x: hidden;
 }
 // custom scroll
@@ -115,12 +118,12 @@
 }
 
 .list-card::-webkit-scrollbar-thumb {
-    background-color: rgb(227, 236, 236); /* màu thanh cuộn */
+    background-color: rgba(219, 214, 214, 0.461); /* màu thanh kéo */
     border-radius: 4px;
 }
 
 .list-card::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(225, 230, 230, 0.562);
+    background-color: rgba(230, 226, 226, 0.4);
 }
 
 .footer {
@@ -136,24 +139,24 @@
 }
 // icon
 .icon-dropDown {
-    color: white;
+    color: var(--color-button-boards) !important;
     transform: translateX(-5px);
 }
 .icon {
     width: 22px;
-    color: white;
+    color: var(--color-blue);
     margin-right: 10px;
 }
 .icon-2 {
     width: 24px;
-    color: white;
-    margin-right: 17px;
+    color: var(--color-button-boards) !important;
+    margin-left: 40px;
 }
 .button-add {
     display: flex;
-    width: 90%;
+    width: 180px;
     gap: 0;
-    color: white;
+    color: var(--color-blue);
     & > :first-child {
         /* CSS cho phần tử con đầu tiên */
         margin: 0;
@@ -164,7 +167,7 @@
     white-space: nowrap; // 👉 KHÔNG CHO XUỐNG DÒNG
 }
 .button-add:hover {
-    background-color: #5bb7ae;
+    background-color: #9eb2e052;
 }
 // input-add-title
 .input-add-title {
@@ -187,9 +190,9 @@
     top: 0px;
     left: 16px;
     font-size: 14px;
-    background: var(--color-green);
+    background: var(--color-label-input);
     padding: 0 6px;
-    color: #fff;
+    color: var(--color-create-card);
     pointer-events: none;
     transition: all 0.3s ease;
     opacity: 0;
@@ -198,21 +201,22 @@
 .searchInput {
     margin-left: 10px;
     margin-top: 8px;
-    height: 32px;
-    width: 217px;
-    border: 2px solid #fff;
+    height: 36px;
+    width: 257px;
+    border: 2px solid var(--color-create-card);
     border-radius: 4px;
     font-size: 13px;
     padding: 0 8px;
-    color: #fff;
+    color: var(--color-button-boards);
     font-weight: 500;
 
     &::placeholder {
-        color: #fff; /* placeholder trắng mặc định */
+        color: var(--color-blue); /* placeholder trắng mặc định */
         font-size: 14px;
     }
+
     &:hover {
-        border: 2px solid #fff;
+        border: 2px solid var(--color-create-card);
     }
     &:focus + .label-search {
         opacity: 1;
@@ -232,7 +236,7 @@
 
 // button-add-column
 .button-add-column2 {
-    background-color: #ffe081;
+    background-color: #6497fd;
     color: #fff;
     /* Box shadow */
     box-shadow: 0 4px 6px rgba(54, 54, 50, 0.2);
@@ -243,14 +247,14 @@
     white-space: nowrap;
 }
 .button-add-column2:hover {
-    background-color: #f7db85;
+    background-color: #699bf7b7;
 }
 .icon2 {
     width: 18px;
-    color: rgb(255, 255, 255);
+    color: rgb(237, 22, 22);
 }
 .icon2:hover {
-    color: rgb(205, 205, 205);
+    color: rgba(235, 19, 19, 0.785);
 }
 
 // css focus cho add column
