--- a/frontend/trello-gui/src/components/InputSearch/InputSearch.module.scss
+++ b/frontend/trello-gui/src/components/InputSearch/InputSearch.module.scss
@@ -12,9 +12,11 @@
     top: -11px;
     left: 7px;
     font-size: 14px;
-    background: #f9f9f9;
+    background: #0057e9;
     padding: 0 6px;
-    color: var(--color-green);
+    color: #fcfcfc;
+    font-size: 12px !important;
+    font-family: Arial, Helvetica, sans-serif;
     pointer-events: none;
     transition: all 0.3s ease;
     opacity: 0;
@@ -23,14 +25,14 @@
 .searchInput {
     height: 31.45px;
     width: 170px;
-    border: 1px solid var(--color-green);
+    border: 1px solid #fff;
     border-radius: 4px;
     font-size: 14px;
     padding: 0 8px;
-    color: var(--color-green);
+    color: #fff;
     font-weight: 500;
     &:hover {
-        border: 2px solid var(--color-green);
+        border: 2px solid #fff;
     }
     &:focus::placeholder {
         color: transparent;
@@ -59,4 +61,26 @@
 }
 .marginLeft {
     padding-left: 37px;
+}
+
+// loadingIcon
+.loadingIcon {
+    width: 20px;
+    height: 20px;
+    color: #fff;
+    animation: spinner 1.5s linear infinite;
+}
+.closeIcon {
+    transform: translateX(-25px) translateY(5px);
+    width: 20px;
+    height: 20px;
+    color: #fff;
+}
+@keyframes spinner {
+    from {
+        transform: translateX(-25px) translateY(5px) rotate(0deg);
+    }
+    to {
+        transform: translateX(-25px) translateY(5px) rotate(360deg);
+    }
 }
