--- a/frontend/trello-gui/src/components/ModeSelect/ModeSelect.module.scss
+++ b/frontend/trello-gui/src/components/ModeSelect/ModeSelect.module.scss
@@ -4,9 +4,10 @@
     align-items: center;
     position: relative;
     margin-right: 10px;
-        &:hover .select-label {
-         font-weight: 600;
+    &:hover .select-label {
+        font-weight: 600;
     }
+    background-color: var(--color-app-bar);
 }
 .select-label {
     position: absolute;
@@ -15,18 +16,69 @@
     left: 7px;
     font-size: 12px;
     font-weight: 500;
-    background: #F9F9F9;
+    background-color: var(--color-app-bar);
     padding: 0 6px;
-    color: var(--color-green);
+    color: #fff;
 }
 .select-option {
-    height: 31.45px;
-    width: 100px;
-    border: 1px solid var(--color-green);
-    border-radius: 4px;
+    width: 100%;
+    height: 30px;
+    padding: 2px 32px 0px 5px;
+
+    border: 1.8px solid #fff;
+    border-radius: 6px;
+
+     background-color: var(--color-app-bar) !important; // chống nền xám của chrome
+    color: #fff !important;
+
     font-size: 14px;
-    color: var(--color-green);
+    font-weight: 500;
+
+    appearance: none !important;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+
+    cursor: pointer;
+    outline: none;
+
+    background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='14' width='14' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'><path d='M5.516 7.548l4.484 4.39 4.484-4.39a1.304 1.304 0 1 1 1.852 1.836l-5.41 5.299a1.304 1.304 0 0 1-1.852 0L3.664 9.384a1.304 1.304 0 1 1 1.852-1.836z'/></svg>");
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+
+    transition: 0.2s ease;
+
     &:hover {
-         border: 2px solid var(--color-green);
+        background-color: #9a9ea4 !important;
     }
+
+    &:focus {
+        box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.3);
+    }
+}
+/* màu mặc định của option */
+/* OPTION MẶC ĐỊNH */
+.select-option option {
+    background: #f2f2ff  !important; /* nền trắng */
+    color: #131111;
+    padding: 8px;
+
+    /* shadow nhẹ và mềm */
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12) !important;
+
+    /* bỏ viền xấu */
+    border: 1px solid #000 !important;
+    font-size: 13.5px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+/* OPTION HOVER */
+.select-option option:hover {
+    background: #f30000 !important; /* trắng hơi xám */
+    color: #000 !important;
+}
+
+/* OPTION ĐƯỢC CHỌN */
+.select-option option:checked {
+    background: #f2f2ff  !important; /* nền trắng */
+    color: #131111;
 }
